--- a/results.tex
+++ b/results.tex
@@ -1,7 +1,7 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
+    \frametitle{Results}
     \framesubtitle{Unlimited network}
 
     \begin{overprint}
@@ -17,7 +17,7 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
+    \frametitle{Results}
     \framesubtitle{Heavily limited network}
 
     \begin{overprint}
@@ -31,7 +31,7 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
+    \frametitle{Results}
     \framesubtitle{Heavily limited network}
 
     \begin{overprint}
@@ -47,7 +47,7 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
+    \frametitle{Results}
     \framesubtitle{Low bandwidth, 0.5/0.25 Mbit/s}
 
     \begin{overprint}
@@ -61,7 +61,7 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
+    \frametitle{Results}
     \framesubtitle{Low bandwidth, UDP trace multiplied by 0.6/0.3}
 
     \begin{overprint}
@@ -77,8 +77,8 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
-    \framesubtitle{High latency, 600 ms RTT}
+    \frametitle{Results}
+    \framesubtitle{High static latency, 600 ms RTT, 10 Mbit/s}
 
     \begin{overprint}
         \uncover<+->{}
@@ -91,8 +91,8 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
-    \framesubtitle{Latency variation, 10 Mbit/s, 50/50ms + 2.5/0.ms deviation}
+    \frametitle{Results}
+    \framesubtitle{Latency variation, 50/50ms + 2.5/0.1ms deviation, 10 Mbit/s}
 
     \begin{overprint}
         \uncover<+->{}
@@ -107,8 +107,8 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
-    \framesubtitle{Low-loss scenario (approx 8\%)}
+    \frametitle{Results}
+    \framesubtitle{Low-loss scenario, approx 8\%, 10 Mbit/s}
 
     \begin{overprint}
         \uncover<+->{}
@@ -121,8 +121,8 @@
 
 \begin{frame}
 
-    \frametitle{Looking at different categories of scenarios}
-    \framesubtitle{High-loss scenario (approx 22\%)}
+    \frametitle{Results}
+    \framesubtitle{High-loss scenario, approx 22\%, 10 Mbit/s}
 
     \begin{overprint}
         \uncover<+->{}
