--- a/why-quic-opera.tex
+++ b/why-quic-opera.tex
@@ -1,18 +1,28 @@
 
 \begin{frame}
 
+    \frametitle{Why look at QUIC?}
+
+    \begin{overprint}
+        \uncover<+->{Available measurements of QUIC seems to focus mostly on the best-case scenarios for QUIC and HTTP/2 with high bandwidth-delay product. }
+    \end{overprint}
+
+\end{frame}
+% -----------------------------
+
+\begin{frame}
+
     \frametitle{Why does QUIC exist?}
 
-    \framesubtitle{QUIC started with HTTP/2.}
+    \framesubtitle{QUIC is a biproduct of the revolution HTTP/2}
 
     \begin{overprint}
         \uncover<+->{}
         \uncover<+->{
-        HTTP/2 was created in order to shorten web latencies. HTTP/2 removes the limitation of HTTP/1.1 which only can send one resource at the time over a TCP connection. }
-        ~\\
-        ~\\
-        \uncover<+->{
         Sending multiple resources over the same TCP connection makes HTTP/2 perform both better AND worse than HTTP/1.1.}
+        ~\\
+        ~\\
+        \uncover<+->{A lot of information on the web urges people to switch to HTTP/2.}
     \end{overprint}
 
 \end{frame}
@@ -20,8 +30,9 @@
 % -------------------------------------------
 
 \begin{frame}
-    \frametitle{HTTP/2 on stable connections}
+    \frametitle{HTTP/2 on stable connections.}
     \begin{overprint}
+        %\framesubtitle{HTTP/2 on stable connections.}
 
         \uncover<+->{}
         \uncover<+->{
@@ -40,8 +51,8 @@
 
 % -------------------------------------------
 \begin{frame}
-\frametitle{HTTP/2 on unstable connections}
-    \framesubtitle{What about not so stable connections then?}
+    \frametitle{What about unstable connections then?}
+    %\framesubtitle{}
 
         \only<2>{
         Sending multiple resources over one TCP connection becomes a problem. A packet-loss or out-of-order packet for one resource stream causes head-of-line blocking.}
@@ -49,28 +60,8 @@
 \end{frame}
 
 % ----------------------------------
-
 \begin{frame}
-    \frametitle{Why does QUIC exist?}
-    \framesubtitle{What about not so stable connections then?}
-    \begin{overprint}
-
-        \uncover<+->{}
-        \only<2>{
-        \includegraphics[width=0.9\textwidth]{figures/http2-two-resources.png}}
-        \only<3,4>{
-        \includegraphics[width=0.9\textwidth]{figures/http2-two-resources-packet-loss.png}}
-        \only<4>{
-        Head-of-line blocking is introduced since the TCP connection has the responsibilty of delivering packets in order.}
-
-    \end{overprint}
-
-\end{frame}
-
-
-% ----------------------------------
-\begin{frame}
-    \frametitle{Why does QUIC exist?}
+    \frametitle{How is QUIC different?}
     \framesubtitle{QUIC improvements over HTTP/2}
 
     \begin{overprint}
